--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,7 +153,7 @@ add_executable(robot_info_node src/robot_info_main.cpp src/robot_info_class.cpp)
 add_dependencies(robot_info_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(robot_info_node ${catkin_LIBRARIES} robot_info_lib)
 
-add_executable(agv_robot_info_node src/agv_robot_info_main.cpp src/robot_info_class.cpp src/agv_robot_info_class.cpp)
+add_executable(agv_robot_info_node src/agv_robot_info_main.cpp src/robot_info_class.cpp src/agv_robot_info_class.cpp src/hydraulic_system_monitor.cpp)
 add_dependencies(agv_robot_info_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(agv_robot_info_node ${catkin_LIBRARIES})
 
